--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,41 +1,34 @@
 name: Tests
 
-on: ["push", "pull_request"]
+on:
+  push:
+  pull_request:
 
 jobs:
-  ci:
-    runs-on: ${{ matrix.os }}
+  linux_tests:
+    runs-on: ubuntu-latest
 
     strategy:
+      fail-fast: true
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        php: ["8.0", "8.1"]
-        dependency-version: [prefer-lowest, prefer-stable]
+        php: [8.0, 8.1]
 
-    name: PHP ${{ matrix.php }} - ${{ matrix.os }} - ${{ matrix.dependency-version }}
+    name: PHP ${{ matrix.php }}
 
     steps:
-      - name: Set git to use LF
-        run: |
-          git config --global core.autocrlf false
-          git config --global core.eol lf
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v2
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
-          extensions: fileinfo
+          extensions: dom, curl, libxml, mbstring, zip, fileinfo
           tools: composer:v2
-          coverage: pcov
+          coverage: none
 
-      - name: Setup Problem Matches
-        run: |
-          echo "::add-matcher::${{ runner.tool_cache }}/php.json"
-          echo "::add-matcher::${{ runner.tool_cache }}/phpunit.json"
-      - name: Install Composer dependencies
-        run: composer update --${{ matrix.dependency-version }} --no-interaction --prefer-dist --ansi
+      - name: Install dependencies
+        run: composer install --no-interaction --prefer-dist
 
-      - name: Unit Testing
+      - name: Execute tests
         run: vendor/bin/pest --colors=always
